tests/ui/suggestions/suggest-assoc-fn-call-with-turbofish-placeholder.stderr
error[E0599]: no method named `default_hello` found for struct `GenericAssocMethod<{integer}>` in the current scope
  --> $DIR/suggest-assoc-fn-call-with-turbofish-placeholder.rs:9:7
   |
LL | struct GenericAssocMethod<T>(T);
   | ---------------------------- method `default_hello` not found for this struct
...
LL |     x.default_hello();
   |     --^^^^^^^^^^^^^--
   |     | |
   |     | this is an associated function, not a method
   |     help: use associated function syntax instead: `GenericAssocMethod::<_>::default_hello()`
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
note: the candidate is defined in an impl for the type `GenericAssocMethod<T>`
  --> $DIR/suggest-assoc-fn-call-with-turbofish-placeholder.rs:4:5
   |
LL |     fn default_hello() {}
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
